--- a/views/home.twig
+++ b/views/home.twig
@@ -41,7 +41,7 @@
 								<h3 class="subheading">{{ home_cards[3].custom.title}}</h3>
 								<p class="card-description">{{ home_cards[3].custom.description}}</p>
 							</div>
-							<p class="class-img"><img src="{{theme.link}}/static/img/shield.png"></p>
+							<p class="class-img"><img src="{{theme.link}}/static/img/shield_new.png"></p>
 						</div>
 					</div>
 				</div>
@@ -94,16 +94,6 @@
 					{% else %}
 						<a href="{{site.url}}/login" class="button button-m">Acceso</a>
 					{% endif %}
-				</div>
-			</div>
-		</section>
-		<section id="banner">
-			<div class="wrapper">
-				<img id="first-edition" src="{{theme.link}}/static/img/primera-edicion.png" alt="">
-				<div>
-					<h2>Sume créditos, inscríbase en la anterior edición de
-						<br>“Actualización del abordaje terapéutico del paciente con dislipemia”</h2>
-					<a href="https://primera-edicion.k9umlaude.com" class="button button-xxl button-white" target="_blank">Acceder a la primera edición</a>
 				</div>
 			</div>
 		</section>
