--- a/views/register.twig
+++ b/views/register.twig
@@ -9,10 +9,17 @@
 						<a href="{{site.url}}/login" class="link">acceda a su cuenta</a>
 					</p>
 					<p class="text">Le damos la bienvenida al entorno formativo de referencia sobre hipercolesterolemia, donde podrá actualizar y complementar sus conocimientos sobre su abordaje terapéutico.</p>
-					<p class="text">Además de estar acreditada con 11,3 créditos por la Comisión de Formación Continuada de las Profesiones Sanitarias de la Comunidad de Madrid para médicos especialistas implicados en el manejo del paciente con dislipemias, cuenta con la participación de las principales sociedades científicas en el área: SEC, SEA, SEMI, SEEN, SED y SEN.</p>
+					<p class="text">Además de estar acreditada con 8,5 créditos por la Comisión de Formación Continuada de las Profesiones Sanitarias de la Comunidad de Madrid para médicos especialistas implicados en el manejo del paciente con dislipemias, cuenta con la participación de las principales sociedades científicas en el área: SEC, SEA, SEMI, SEEN, SED y SEN.</p>
 					<a id="btn-goToStep1" href="#" class="button button-l submit">Comenzar registro</a>
 				</div>
 				<div class="right register-form">
+					<div id="registerOverlay">
+						<div class="messageWrapper">
+							<p style="text-align: center;">El usuario ya existe.<br>Si no recuerda la contraseña, pulse
+								<a href="{{site.url}}/wp-login.php?action=lostpassword" class="link">este enlace</a>.<br>O
+								<a href="{{site.url}}/login/" class="link">acceda a su cuenta</a>.</p>
+						</div>
+					</div>
 					<div id="image">
 						<img src="{{theme.link}}/static/img/tablet.png" alt="">
 					</div>
