--- a/src/scss/_course.scss
+++ b/src/scss/_course.scss
@@ -56,6 +56,12 @@
 			}
 		}
 	}
+	.heading-wrapper {
+		padding: 0 2rem;
+		@media (min-width: 1700px) {
+			padding: 0;
+		}
+	}
 	.module {
 		&:not(:first-of-type) {
 			&.disabled {
@@ -134,6 +140,9 @@
 				@apply ml-0;
 			}
 		}
+		.progress {
+			@apply max-h-8;
+		}
 		.right {
 			@apply flex flex-wrap sm:flex-nowrap items-center justify-between pl-0 2xl:pl-8;
 			p {
@@ -198,9 +207,9 @@
 	}
 	.wrapper {
 		@apply max-content p-0 md:py-8 w-full;
-		padding: 0 2rem;
+		padding: 2rem;
 		@media (min-width: 1700px) {
-			padding: 0;
+			padding: 2rem 0;
 		}
 	}
 	> .wrapper {
