--- a/src/scss/_register.scss
+++ b/src/scss/_register.scss
@@ -5,6 +5,18 @@
 			outline: none;
 		}
 	}
+	#registerOverlay {
+		&.active {
+			@apply flex;
+		}
+		@apply absolute hidden h-full items-center justify-center w-full top-0 z-10;
+		background: rgba(0, 0, 0, 0.6);
+		backdrop-filter: blur(5px);
+		-webkit-backdrop-filter: blur(5px);
+		.messageWrapper {
+			@apply bg-white flex h-4/5 items-center justify-center p-24 relative top-0 w-4/5;
+		}
+	}
 	#steps {
 		@apply hidden overflow-x-hidden;
 		overflow-y: -webkit-paged-x;
@@ -57,6 +69,9 @@
 		@media (max-width: 640px) {
 			@apply pb-8 pt-0;
 		}
+	}
+	.register-form {
+		@apply relative;
 	}
 	.right {
 		img {
