--- a/views/register.twig
+++ b/views/register.twig
@@ -125,7 +125,7 @@
 							</div>
 							<div id="step3" class="step">
 								<p class="subheading">Contraseña</p>
-								<div class="field-wrapper">
+								<div class="field-wrapper itEnd">
 									<div class="left">
 										<div class="field">
 											<label for="password" class="text">Contraseña<sup>*</sup>
@@ -134,7 +134,7 @@
 											<p class="error">Contraseña requerida</p>
 											<p class="error2">La contraseña debe tener al menos 8 caracteres</p>
 										</div>
-										<div class="field">
+										<div class="field mb0">
 											<label for="confirm" class="text">Confirma la contraseña<sup>*</sup>
 											</label>
 											<input id="confirm" type="password" class="box" placeholder="Confirma la contraseña" tabindex="-1">
@@ -149,18 +149,9 @@
 												<a href="/aviso-legal" class="link">Aviso Legal</a>
 												y la
 												<a href="/politica-privacidad" class="link">política de privacidad</a>
-												de MEDEA, Medical Education Agency, S.L.
-												<sup>*</sup>
+												de MEDEA, Medical Education Agency, S.L.<sup>*</sup>
 											</label>
 										</div>
-										<div class="checkbox">
-											<input id="accept3" type="checkbox" class="styled-checkbox off">
-											<label for="accept3" class="long-text">
-												Acepto a que Sanofi-Aventis S.A (“Sanofi”) trate mis datos personales facilitados para gestionar las relaciones promocionales conmigo, llevar a cabo segmentación profesional para entender mejor mis intereses y ofrecerme contenido personalizado, y para fines estadísticos, históricos o científicos. Puede usted ajustar de forma individual cada una de las finalidades anteriores.
-												<a href="/politica-privacidad-sanofi" class="link">Ver en detalle</a>.
-											</label>
-										</div>
-										<br>
 										<a id="btn-submit" href="#" class="button button-m disabled submit">Crear cuenta</a>
 									</div>
 								</div>
