--- a/views/blocks/footer.twig
+++ b/views/blocks/footer.twig
@@ -18,9 +18,9 @@
 </div>
 <footer>
 	<div class="wrapper">
-		<div class="left">&copy;
+		<div class="left">Copyright &copy;
 			{{ now|date('Y') }}
-			Sanofi-aventis, S.A. Todos los derechos reservados</div>
+			Medea.</div>
 		<div class="right">
 			<a href="{{site.url}}/aviso-legal" target="_blank">Aviso legal</a>
 			<a href="mailto:secretaria.tecnica@k9umlaude.es?subject=Contacto%20K9um%20laude">Contacto</a>
