College number register fix

--- a/views/register.twig
+++ b/views/register.twig
@@ -116,7 +116,7 @@
 											</label>
 											<input id="correlativenum" type="number" class="box" placeholder="Número de colegiado" tabindex="-1">
 											<p class="error">Número requerido</p>
-											<p class="error2">Formato incorrecto</p>
+											<p class="error2">Formato incorrecto. Cinco últimas cifras (las cuatro primeras se corresponden con las provincias anteriores).</p>
 										</div>
 										<br>
 										<a id="btn-goToStep3" href="#" class="button button-m disabled submit">Siguiente</a>
